# productimon

./: .bazelrc  .gitignore  BUILD  PRIVACY_POLICY.md  README.md  WORKSPACE  go.mod  package.json
aggregator/: BUILD.bazel  README.md  authenticator.go  http.go  label.go  main.go  schema.sql  service.go
aggregator/authenticator/: BUILD.bazel  authenticator.go
aggregator/db/: BUILD  schema.sql
aggregator/deviceState/: BUILD.bazel  deviceState.go  orderedEventQueue.go  orderedEventQueue_test.go
aggregator/nlp/: BUILD.bazel  wikipedia.go  wikipedia_test.go
aggregator/notifications/: BUILD.bazel  email.go  notifier.go
aggregator/service/: BUILD.bazel  account.go  admin.go  analysis.go  events.go  goals.go  label.go  service.go  utils.go
analyzer/: README.md
analyzer/deviceState/: BUILD.bazel
analyzer/nlp/: BUILD.bazel  list.go  list_test.go  nlp.go  wikipedia.go  wikipedia_test.go
docs/: windows.md
images/: BUILD
internal/: BUILD.bazel  README.md  version.go
proto/: generate.go
proto/common/: BUILD.bazel  common.proto  events.proto
proto/svc/: BUILD.bazel  aggregator.proto  api.proto
reporter/: BUILD  README.md  cli.c  system_headers.BUILD  system_libs.BUILD
reporter/browser/: BUILD.bazel  README.md  background.html  background.js  extern.js  main.go  manifest.json  popup.css  popup.html  popup.js
reporter/browser/popup/: BUILD.bazel  logger.js  login.js  login.soy  main.js  options.js  options.soy
reporter/cli/: BUILD  cli.c
reporter/core/: BUILD.bazel  auth.go  config.go  main.go
reporter/core/auth/: BUILD.bazel  connection.go  credentials.go  dialer_js.go  dialer_native.go  login.go
reporter/core/cgo/: BUILD.bazel  main.go  terminal.go
reporter/core/config/: BUILD.bazel  config.go  config_js.go  config_native.go
reporter/core/reporter/: BUILD.bazel  events.go  helpers.go  reporter.go
reporter/gui/: BUILD  OptionCheckBox.h  README.md  images_qrc.qrc  loginwindow.cc  loginwindow.h  main.cc  mainwindow.cc  mainwindow.h
reporter/plat/: BUILD  tracking.c  tracking.h
reporter/plat/chrome/: BUILD.bazel  background.js  main.go  reporter.js
reporter/plat/linux/: inhibit.c  inhibit.h  tracking.c
reporter/plat/macos/: Info.plist  install_names.sh  tracking.m
reporter/plat/windows/: BUILD  logo.rc  tracking.c  version.rc
tools/: BUILD.bazel  bundle-win-app.sh  commonjs_proto_library.bzl  framework_files.bzl  gen-apple-icns.sh  gen-windows-ico.sh  workspace-status.py
viewer/webfe/: BUILD.bazel  README.md  index.html  package-lock.json  package.json  webpack.dev.config.js  webpack.prod.config.js
viewer/webfe/public/: index.html
viewer/webfe/src/: App.css  App.js  Utils.js
viewer/webfe/src/account/: Settings.js  SignIn.js  SignUp.js
viewer/webfe/src/components/: SignIn.js  SignUp.js
viewer/webfe/src/core/: Fixture.js  TopMenu.js
viewer/webfe/src/dashboard/: AdminLabelManagement.js  AdminManagement.js  AdminServerStatus.js  Dashboard.js  DashboardCustomizer.js  FullScreenGraph.js  Graph.js  Histogram.js  Pie.js  Table.js  Theme.js  listItems.js  utils.js
viewer/webfe/src/dashboard/goal/: AddGoal.js  DisplayGoal.js  Goals.js
