load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "git.yiad.am/productimon/aggregator",
    visibility = ["//visibility:private"],
    x_defs = select({
        "//internal:debug_build": {
            "jsFilename": "app.dev.js",
            "mapFilename": "app.dev.js.map",
        },
        "//conditions:default": {
            "jsFilename": "app.bundle.js",
        },
    }),
    deps = [
        "//aggregator/authenticator:go_default_library",
        "//aggregator/notifications:go_default_library",
        "//aggregator/service:go_default_library",
        "//internal:go_default_library",
        "//proto/svc:go_default_library",
        "//viewer/webfe:go_default_library",
        "@com_github_improbable_eng_grpc_web//go/grpcweb:go_default_library",
        "@com_github_mattn_go_sqlite3//:go_default_library",
        "@com_github_productimon_wasmws//:go_default_library",
        "@io_nhooyr_websocket//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)

go_binary(
    name = "aggregator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
