load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["authenticator.go"],
    importpath = "git.yiad.am/productimon/aggregator/authenticator",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cloudflare_cfssl//csr:go_default_library",
        "@com_github_cloudflare_cfssl//initca:go_default_library",
        "@com_github_cloudflare_cfssl//signer:go_default_library",
        "@com_github_cloudflare_cfssl//signer/local:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
    ],
)
