load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "nlp.go",
        "wikipedia.go",
    ],
    importpath = "git.yiad.am/productimon/aggregator/nlp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["wikipedia_test.go"],
    embed = [":go_default_library"],
)
