load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "email.go",
        "notifier.go",
    ],
    importpath = "git.yiad.am/productimon/aggregator/notifications",
    visibility = ["//visibility:public"],
    deps = ["//third_party/smtp_login_auth:go_default_library"],
)
