load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "deviceState.go",
        "orderedEventQueue.go",
    ],
    importpath = "git.yiad.am/productimon/analyzer/deviceState",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["orderedEventQueue_test.go"],
    embed = [":go_default_library"],
)
