load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//tools:commonjs_proto_library.bzl", "commonjs_proto_library")

proto_library(
    name = "common_proto",
    srcs = [
        "common.proto",
        "events.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "common_go_proto",
    importpath = "git.yiad.am/productimon/proto/common",
    proto = ":common_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":common_go_proto"],
    importpath = "git.yiad.am/productimon/proto/common",
    visibility = ["//visibility:public"],
)

commonjs_proto_library(
    name = "common_js_proto",
    proto = ":common_proto",
    visibility = ["//visibility:public"],
)
