load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "svc_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "git.yiad.am/productimon/proto/svc",
    proto = ":svc_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/common:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":svc_go_proto"],
    importpath = "git.yiad.am/productimon/proto/svc",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "svc_proto",
    srcs = ["aggregator.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common:common_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)
