load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "main.go",
    ],
    cgo = True,
    importpath = "git.yiad.am/productimon/reporter/core",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/svc:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
    ],
)

go_binary(
    name = "core",
    embed = [":go_default_library"],
    linkmode = "c-archive",
    visibility = ["//visibility:public"],
)
