load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

config_setting(
    name = "debug_build",
    values = {
        "compilation_mode": "dbg",
    },
)

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "main.go",
    ],
    cgo = True,
    importpath = "git.yiad.am/productimon/reporter/core",
    visibility = ["//visibility:private"],
    x_defs = select({
        "debug_build": {
            "build": "DEBUG",
        },
        "//conditions:default": {},
    }),
    deps = [
        "//proto/common:go_default_library",
        "//proto/svc:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "core",
    embed = [":go_default_library"],
    linkmode = "c-archive",
    visibility = ["//visibility:public"],
)
