load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "connection.go",
        "credentials.go",
        "dialer_js.go",
        "dialer_native.go",
        "login.go",
    ],
    importpath = "git.yiad.am/productimon/reporter/core/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common:go_default_library",
        "//proto/svc:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:js": [
            "@com_github_productimon_wasmws//:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
