load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "terminal.go",
    ],
    cgo = True,
    importpath = "git.yiad.am/productimon/reporter/core/cgo",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_crypto//ssh/terminal:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//internal:go_default_library",
            "//reporter/core/config:go_default_library",
            "//reporter/core/reporter:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "cgo",
    embed = [":go_default_library"],
    linkmode = "c-archive",
    visibility = ["//visibility:public"],
)
