load("@io_bazel_rules_go//go:def.bzl", "go_library")

config_setting(
    name = "debug_build",
    values = {
        "compilation_mode": "dbg",
    },
)

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "config_js.go",
        "config_native.go",
    ],
    importpath = "git.yiad.am/productimon/reporter/core/config",
    visibility = ["//visibility:public"],
    x_defs = select({
        "debug_build": {
            "build": "DEBUG",
        },
        "//conditions:default": {},
    }),
)
