load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "config_js.go",
        "config_native.go",
    ],
    importpath = "git.yiad.am/productimon/reporter/core/config",
    visibility = ["//visibility:public"],
    deps = ["//internal:go_default_library"],
)
